// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overvote report 1`] = `
{
  "Chief-Justice-1": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "charles-darwin",
          "name": "Charles Darwin",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "stephen-hawking",
          "name": "Stephen Hawking",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "Chief-Justice-1",
      "seats": 1,
      "title": "Chief Justice, 1st Court of Appeals",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "charles-darwin",
            "name": "Charles Darwin",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "stephen-hawking",
            "name": "Stephen Hawking",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 9,
      },
    ],
  },
  "District-judge-11": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "bill-gates",
          "name": "Bill Gates",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "pablo-picasso",
          "name": "Pablo Picasso",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "wolfgang-amadeus-mozart",
          "name": "Wolfgang Amadeus Mozart",
          "partyIds": [
            "2",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-11",
      "seats": 1,
      "title": "District Judge, 11th Judicial District",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "bill-gates",
            "name": "Bill Gates",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "pablo-picasso",
            "name": "Pablo Picasso",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 11,
      },
      {
        "candidates": {
          "first": {
            "id": "bill-gates",
            "name": "Bill Gates",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "wolfgang-amadeus-mozart",
            "name": "Wolfgang Amadeus Mozart",
            "partyIds": [
              "2",
            ],
          },
        },
        "tally": 11,
      },
      {
        "candidates": {
          "first": {
            "id": "pablo-picasso",
            "name": "Pablo Picasso",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "wolfgang-amadeus-mozart",
            "name": "Wolfgang Amadeus Mozart",
            "partyIds": [
              "2",
            ],
          },
        },
        "tally": 10,
      },
    ],
  },
  "District-judge-125": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "jane-austen",
          "name": "Jane Austen",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "carrie-fisher",
          "name": "Carrie Fisher",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-125",
      "seats": 1,
      "title": "District Judge, 125th Judicial District",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "jane-austen",
            "name": "Jane Austen",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "carrie-fisher",
            "name": "Carrie Fisher",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 9,
      },
    ],
  },
  "District-judge-127": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "bob-barker",
          "name": "Bob Barker",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "angelina-jolie",
          "name": "Angelina Jolie",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-127",
      "seats": 1,
      "title": "District Judge, 127th Judicial District",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "bob-barker",
            "name": "Bob Barker",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "angelina-jolie",
            "name": "Angelina Jolie",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 11,
      },
    ],
  },
  "District-judge-129": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "salvador-dali",
          "name": "Salvador Dali",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "anne-hathaway",
          "name": "Anne Hathaway",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-129",
      "seats": 1,
      "title": "District Judge, 129th Judicial District",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "salvador-dali",
            "name": "Salvador Dali",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "anne-hathaway",
            "name": "Anne Hathaway",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 10,
      },
    ],
  },
  "District-judge-61": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "george-washington",
          "name": "George Washington",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "steven-spielberg",
          "name": "Steven Spielberg",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-61",
      "seats": 1,
      "title": "District Judge, 61st Judicial District",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "george-washington",
            "name": "George Washington",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "steven-spielberg",
            "name": "Steven Spielberg",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 8,
      },
    ],
  },
  "District-judge-80": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "johan-sebastian-bach",
          "name": "Johann Sebastian Bach",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "alexander-graham-bell",
          "name": "Alexander Graham Bell",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-80",
      "seats": 1,
      "title": "District Judge, 80th Judicial District",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "johan-sebastian-bach",
            "name": "Johann Sebastian Bach",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "alexander-graham-bell",
            "name": "Alexander Graham Bell",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 16,
      },
    ],
  },
  "Justice-1-4": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "mark-antony",
          "name": "Mark Antony",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "harriet-tubman",
          "name": "Harriet Tubman",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "Justice-1-4",
      "seats": 1,
      "title": "Justice, 1st Court of Appeals, Place 4",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "mark-antony",
            "name": "Mark Antony",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "harriet-tubman",
            "name": "Harriet Tubman",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 11,
      },
    ],
  },
  "Justice-14-2": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "martin-luther-king",
          "name": "Dr. Martin Luther King Jr.",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "marilyn-monroe",
          "name": "Marilyn Monroe",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "Justice-14-2",
      "seats": 1,
      "title": "Justice, 14th Court of Appeals, Place 2",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "martin-luther-king",
            "name": "Dr. Martin Luther King Jr.",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "marilyn-monroe",
            "name": "Marilyn Monroe",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 12,
      },
    ],
  },
  "Justice-14-9": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "nikola-tesla",
          "name": "Nikola Tesla",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "vincent-van-gogh",
          "name": "Vincent Van Gogh",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "Justice-14-9",
      "seats": 1,
      "title": "Justice, 14th Court of Appeals, Place 9",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "nikola-tesla",
            "name": "Nikola Tesla",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "vincent-van-gogh",
            "name": "Vincent Van Gogh",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 16,
      },
    ],
  },
  "Justice-peace-1-1": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "julia-child",
          "name": "Julia Child",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "paul-mccartney",
          "name": "Paul McCartney",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "Justice-peace-1-1",
      "seats": 1,
      "title": "Justice of the Peace, Precinct 1, Place 1",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "julia-child",
            "name": "Julia Child",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "paul-mccartney",
            "name": "Paul McCartney",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 9,
      },
    ],
  },
  "comm-ag": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "helen-keller",
          "name": "Helen Keller",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "steve-jobs",
          "name": "Steve Jobs",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "comm-ag",
      "seats": 1,
      "title": "Commissioner of Agriculture",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "helen-keller",
            "name": "Helen Keller",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "steve-jobs",
            "name": "Steve Jobs",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 17,
      },
    ],
  },
  "comptroller": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "natalie-portman",
          "name": "Natalie Portman",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "frank-sinatra",
          "name": "Frank Sinatra",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "andy-warhol",
          "name": "Andy Warhol",
          "partyIds": [
            "3",
          ],
        },
        {
          "id": "alfred-hitchcock",
          "name": "Alfred Hitchcock",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "comptroller",
      "seats": 1,
      "title": "State Comptroller",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "natalie-portman",
            "name": "Natalie Portman",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "andy-warhol",
            "name": "Andy Warhol",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 5,
      },
      {
        "candidates": {
          "first": {
            "id": "natalie-portman",
            "name": "Natalie Portman",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "alfred-hitchcock",
            "name": "Alfred Hitchcock",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 8,
      },
      {
        "candidates": {
          "first": {
            "id": "andy-warhol",
            "name": "Andy Warhol",
            "partyIds": [
              "3",
            ],
          },
          "second": {
            "id": "alfred-hitchcock",
            "name": "Alfred Hitchcock",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 4,
      },
      {
        "candidates": {
          "first": {
            "id": "natalie-portman",
            "name": "Natalie Portman",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "frank-sinatra",
            "name": "Frank Sinatra",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 5,
      },
      {
        "candidates": {
          "first": {
            "id": "frank-sinatra",
            "name": "Frank Sinatra",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "alfred-hitchcock",
            "name": "Alfred Hitchcock",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 4,
      },
      {
        "candidates": {
          "first": {
            "id": "frank-sinatra",
            "name": "Frank Sinatra",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "andy-warhol",
            "name": "Andy Warhol",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 2,
      },
    ],
  },
  "constable-1": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "beethoven",
          "name": "Ludwig Van Beethoven",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "walt-disney",
          "name": "Walt Disney",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "constable-1",
      "seats": 1,
      "title": "Constable, Precinct 1",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "beethoven",
            "name": "Ludwig Van Beethoven",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "walt-disney",
            "name": "Walt Disney",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 4,
      },
    ],
  },
  "county-attorney": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "isaac-newton",
          "name": "Isaac Newton",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "harry-potter",
          "name": "Harry Potter",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "county-attorney",
      "seats": 1,
      "title": "County Attorney",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "isaac-newton",
            "name": "Isaac Newton",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "harry-potter",
            "name": "Harry Potter",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 5,
      },
    ],
  },
  "county-tax-assessor": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "bruce-lee",
          "name": "Bruce Lee",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "christopher-columbus",
          "name": "Christopher Columbus",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "county-tax-assessor",
      "seats": 1,
      "title": "Country Tax Assessor-Collector",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "bruce-lee",
            "name": "Bruce Lee",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "christopher-columbus",
            "name": "Christopher Columbus",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 5,
      },
    ],
  },
  "district-attorney": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "theodore-roosevelt",
          "name": "Theodore Roosevelt",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "edgar-allan-poe",
          "name": "Edgar Allan Poe",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "district-attorney",
      "seats": 1,
      "title": "District Attorney",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "theodore-roosevelt",
            "name": "Theodore Roosevelt",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "edgar-allan-poe",
            "name": "Edgar Allan Poe",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 2,
      },
    ],
  },
  "governor": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "sherlock-holmes",
          "name": "Sherlock Holmes",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "thomas-edison",
          "name": "Thomas Edison",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "governor",
      "seats": 1,
      "title": "Governor",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "sherlock-holmes",
            "name": "Sherlock Holmes",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "thomas-edison",
            "name": "Thomas Edison",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 5,
      },
    ],
  },
  "lieutenant-governor": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "winston-churchill",
          "name": "Winston Churchill",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "oprah-winfrey",
          "name": "Oprah Winfrey",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "louis-armstrong",
          "name": "Louis Armstrong",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "lieutenant-governor",
      "seats": 1,
      "title": "Lieutenant Governor",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "oprah-winfrey",
            "name": "Oprah Winfrey",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "louis-armstrong",
            "name": "Louis Armstrong",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 15,
      },
      {
        "candidates": {
          "first": {
            "id": "winston-churchill",
            "name": "Winston Churchill",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "oprah-winfrey",
            "name": "Oprah Winfrey",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 15,
      },
      {
        "candidates": {
          "first": {
            "id": "winston-churchill",
            "name": "Winston Churchill",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "louis-armstrong",
            "name": "Louis Armstrong",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 13,
      },
    ],
  },
  "president": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "marie-curie",
          "name": "Marie Curie",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "indiana-jones",
          "name": "Indiana Jones",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "mona-lisa",
          "name": "Mona Lisa",
          "partyIds": [
            "3",
          ],
        },
        {
          "id": "jackie-chan",
          "name": "Jackie Chan",
          "partyIds": [
            "3",
          ],
        },
        {
          "id": "tim-allen",
          "name": "Tim Allen",
          "partyIds": [
            "2",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "president",
      "seats": 1,
      "title": "President",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "mona-lisa",
            "name": "Mona Lisa",
            "partyIds": [
              "3",
            ],
          },
          "second": {
            "id": "jackie-chan",
            "name": "Jackie Chan",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 3,
      },
      {
        "candidates": {
          "first": {
            "id": "marie-curie",
            "name": "Marie Curie",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "indiana-jones",
            "name": "Indiana Jones",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 6,
      },
      {
        "candidates": {
          "first": {
            "id": "marie-curie",
            "name": "Marie Curie",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "jackie-chan",
            "name": "Jackie Chan",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 5,
      },
      {
        "candidates": {
          "first": {
            "id": "indiana-jones",
            "name": "Indiana Jones",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "jackie-chan",
            "name": "Jackie Chan",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 3,
      },
      {
        "candidates": {
          "first": {
            "id": "marie-curie",
            "name": "Marie Curie",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "tim-allen",
            "name": "Tim Allen",
            "partyIds": [
              "2",
            ],
          },
        },
        "tally": 3,
      },
      {
        "candidates": {
          "first": {
            "id": "indiana-jones",
            "name": "Indiana Jones",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "tim-allen",
            "name": "Tim Allen",
            "partyIds": [
              "2",
            ],
          },
        },
        "tally": 6,
      },
      {
        "candidates": {
          "first": {
            "id": "indiana-jones",
            "name": "Indiana Jones",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "mona-lisa",
            "name": "Mona Lisa",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 4,
      },
      {
        "candidates": {
          "first": {
            "id": "mona-lisa",
            "name": "Mona Lisa",
            "partyIds": [
              "3",
            ],
          },
          "second": {
            "id": "tim-allen",
            "name": "Tim Allen",
            "partyIds": [
              "2",
            ],
          },
        },
        "tally": 5,
      },
      {
        "candidates": {
          "first": {
            "id": "jackie-chan",
            "name": "Jackie Chan",
            "partyIds": [
              "3",
            ],
          },
          "second": {
            "id": "tim-allen",
            "name": "Tim Allen",
            "partyIds": [
              "2",
            ],
          },
        },
        "tally": 3,
      },
      {
        "candidates": {
          "first": {
            "id": "marie-curie",
            "name": "Marie Curie",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "mona-lisa",
            "name": "Mona Lisa",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 2,
      },
    ],
  },
  "representative-district-18": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "michael-jordan",
          "name": "Michael Jordan",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "albert-einstein",
          "name": "Albert Einstein",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "neil-armstrong",
          "name": "Neil Armstrong",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "representative-district-18",
      "seats": 1,
      "title": "Representative, District 18",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "michael-jordan",
            "name": "Michael Jordan",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "neil-armstrong",
            "name": "Neil Armstrong",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 6,
      },
      {
        "candidates": {
          "first": {
            "id": "michael-jordan",
            "name": "Michael Jordan",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "albert-einstein",
            "name": "Albert Einstein",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 8,
      },
      {
        "candidates": {
          "first": {
            "id": "albert-einstein",
            "name": "Albert Einstein",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "neil-armstrong",
            "name": "Neil Armstrong",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 8,
      },
    ],
  },
  "senator": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "earhart",
          "name": "Amelia Earhart",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "bond",
          "name": "James Bond",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "antoinette",
          "name": "Marie Antoinette",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "senator",
      "seats": 1,
      "title": "Senator",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "earhart",
            "name": "Amelia Earhart",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "antoinette",
            "name": "Marie Antoinette",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 4,
      },
      {
        "candidates": {
          "first": {
            "id": "earhart",
            "name": "Amelia Earhart",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "bond",
            "name": "James Bond",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 1,
      },
      {
        "candidates": {
          "first": {
            "id": "bond",
            "name": "James Bond",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "antoinette",
            "name": "Marie Antoinette",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 1,
      },
    ],
  },
  "sheriff": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "robin-williams",
          "name": "Robin Williams",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "brad-pitt",
          "name": "Brad Pitt",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "william-shakespeare",
          "name": "William Shakespeare",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "sheriff",
      "seats": 1,
      "title": "Sheriff",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "robin-williams",
            "name": "Robin Williams",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "brad-pitt",
            "name": "Brad Pitt",
            "partyIds": [
              "1",
            ],
          },
        },
        "tally": 3,
      },
      {
        "candidates": {
          "first": {
            "id": "robin-williams",
            "name": "Robin Williams",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "william-shakespeare",
            "name": "William Shakespeare",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 3,
      },
      {
        "candidates": {
          "first": {
            "id": "brad-pitt",
            "name": "Brad Pitt",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "william-shakespeare",
            "name": "William Shakespeare",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 5,
      },
    ],
  },
  "ss-justic-3": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "john-snow",
          "name": "John Snow",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "mark-twain",
          "name": "Mark Twain",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "ss-justic-3",
      "seats": 1,
      "title": "Justice, Supreme Court, Place 3",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "john-snow",
            "name": "John Snow",
            "partyIds": [
              "1",
            ],
          },
          "second": {
            "id": "mark-twain",
            "name": "Mark Twain",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 3,
      },
    ],
  },
  "ss-justic-5": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "benjamin-franklin",
          "name": "Benjamin Franklin",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "robert-downey-jr",
          "name": "Robert Downey Jr.",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "bill-nye",
          "name": "Bill Nye",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "ss-justic-5",
      "seats": 1,
      "title": "Justice, Supreme Court, Place 5",
      "type": "candidate",
    },
    "tallies": [
      {
        "candidates": {
          "first": {
            "id": "benjamin-franklin",
            "name": "Benjamin Franklin",
            "partyIds": [
              "0",
            ],
          },
          "second": {
            "id": "bill-nye",
            "name": "Bill Nye",
            "partyIds": [
              "3",
            ],
          },
        },
        "tally": 1,
      },
    ],
  },
}
`;

exports[`tabulating a set of CVRs gives expected output 1`] = `
{
  "Chief-Justice-1": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "charles-darwin",
          "name": "Charles Darwin",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "stephen-hawking",
          "name": "Stephen Hawking",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "Chief-Justice-1",
      "seats": 1,
      "title": "Chief Justice, 1st Court of Appeals",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7033,
      "overvotes": 10,
      "undervotes": 327,
    },
    "tallies": {
      "charles-darwin": {
        "option": {
          "id": "charles-darwin",
          "name": "Charles Darwin",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3342,
      },
      "stephen-hawking": {
        "option": {
          "id": "stephen-hawking",
          "name": "Stephen Hawking",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3339,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 15,
      },
    },
  },
  "District-judge-11": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "bill-gates",
          "name": "Bill Gates",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "pablo-picasso",
          "name": "Pablo Picasso",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "wolfgang-amadeus-mozart",
          "name": "Wolfgang Amadeus Mozart",
          "partyIds": [
            "2",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-11",
      "seats": 1,
      "title": "District Judge, 11th Judicial District",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7017,
      "overvotes": 16,
      "undervotes": 303,
    },
    "tallies": {
      "bill-gates": {
        "option": {
          "id": "bill-gates",
          "name": "Bill Gates",
          "partyIds": [
            "0",
          ],
        },
        "tally": 2210,
      },
      "pablo-picasso": {
        "option": {
          "id": "pablo-picasso",
          "name": "Pablo Picasso",
          "partyIds": [
            "1",
          ],
        },
        "tally": 2229,
      },
      "wolfgang-amadeus-mozart": {
        "option": {
          "id": "wolfgang-amadeus-mozart",
          "name": "Wolfgang Amadeus Mozart",
          "partyIds": [
            "2",
          ],
        },
        "tally": 2244,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 15,
      },
    },
  },
  "District-judge-125": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "jane-austen",
          "name": "Jane Austen",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "carrie-fisher",
          "name": "Carrie Fisher",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-125",
      "seats": 1,
      "title": "District Judge, 125th Judicial District",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7019,
      "overvotes": 9,
      "undervotes": 299,
    },
    "tallies": {
      "carrie-fisher": {
        "option": {
          "id": "carrie-fisher",
          "name": "Carrie Fisher",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3360,
      },
      "jane-austen": {
        "option": {
          "id": "jane-austen",
          "name": "Jane Austen",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3336,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 15,
      },
    },
  },
  "District-judge-127": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "bob-barker",
          "name": "Bob Barker",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "angelina-jolie",
          "name": "Angelina Jolie",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-127",
      "seats": 1,
      "title": "District Judge, 127th Judicial District",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7019,
      "overvotes": 11,
      "undervotes": 313,
    },
    "tallies": {
      "angelina-jolie": {
        "option": {
          "id": "angelina-jolie",
          "name": "Angelina Jolie",
          "partyIds": [
            "3",
          ],
        },
        "tally": 3362,
      },
      "bob-barker": {
        "option": {
          "id": "bob-barker",
          "name": "Bob Barker",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3321,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 12,
      },
    },
  },
  "District-judge-129": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "salvador-dali",
          "name": "Salvador Dali",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "anne-hathaway",
          "name": "Anne Hathaway",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-129",
      "seats": 1,
      "title": "District Judge, 129th Judicial District",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7019,
      "overvotes": 10,
      "undervotes": 300,
    },
    "tallies": {
      "anne-hathaway": {
        "option": {
          "id": "anne-hathaway",
          "name": "Anne Hathaway",
          "partyIds": [
            "3",
          ],
        },
        "tally": 3340,
      },
      "salvador-dali": {
        "option": {
          "id": "salvador-dali",
          "name": "Salvador Dali",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3352,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 17,
      },
    },
  },
  "District-judge-61": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "george-washington",
          "name": "George Washington",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "steven-spielberg",
          "name": "Steven Spielberg",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-61",
      "seats": 1,
      "title": "District Judge, 61st Judicial District",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7019,
      "overvotes": 8,
      "undervotes": 316,
    },
    "tallies": {
      "george-washington": {
        "option": {
          "id": "george-washington",
          "name": "George Washington",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3289,
      },
      "steven-spielberg": {
        "option": {
          "id": "steven-spielberg",
          "name": "Steven Spielberg",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3387,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 19,
      },
    },
  },
  "District-judge-80": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "johan-sebastian-bach",
          "name": "Johann Sebastian Bach",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "alexander-graham-bell",
          "name": "Alexander Graham Bell",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "District-judge-80",
      "seats": 1,
      "title": "District Judge, 80th Judicial District",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7019,
      "overvotes": 16,
      "undervotes": 321,
    },
    "tallies": {
      "alexander-graham-bell": {
        "option": {
          "id": "alexander-graham-bell",
          "name": "Alexander Graham Bell",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3349,
      },
      "johan-sebastian-bach": {
        "option": {
          "id": "johan-sebastian-bach",
          "name": "Johann Sebastian Bach",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3319,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 14,
      },
    },
  },
  "Justice-1-4": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "mark-antony",
          "name": "Mark Antony",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "harriet-tubman",
          "name": "Harriet Tubman",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "Justice-1-4",
      "seats": 1,
      "title": "Justice, 1st Court of Appeals, Place 4",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7017,
      "overvotes": 11,
      "undervotes": 316,
    },
    "tallies": {
      "harriet-tubman": {
        "option": {
          "id": "harriet-tubman",
          "name": "Harriet Tubman",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3352,
      },
      "mark-antony": {
        "option": {
          "id": "mark-antony",
          "name": "Mark Antony",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3328,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 10,
      },
    },
  },
  "Justice-14-2": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "martin-luther-king",
          "name": "Dr. Martin Luther King Jr.",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "marilyn-monroe",
          "name": "Marilyn Monroe",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "Justice-14-2",
      "seats": 1,
      "title": "Justice, 14th Court of Appeals, Place 2",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7017,
      "overvotes": 12,
      "undervotes": 312,
    },
    "tallies": {
      "marilyn-monroe": {
        "option": {
          "id": "marilyn-monroe",
          "name": "Marilyn Monroe",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3355,
      },
      "martin-luther-king": {
        "option": {
          "id": "martin-luther-king",
          "name": "Dr. Martin Luther King Jr.",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3325,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 13,
      },
    },
  },
  "Justice-14-9": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "nikola-tesla",
          "name": "Nikola Tesla",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "vincent-van-gogh",
          "name": "Vincent Van Gogh",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "Justice-14-9",
      "seats": 1,
      "title": "Justice, 14th Court of Appeals, Place 9",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7017,
      "overvotes": 17,
      "undervotes": 292,
    },
    "tallies": {
      "nikola-tesla": {
        "option": {
          "id": "nikola-tesla",
          "name": "Nikola Tesla",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3306,
      },
      "vincent-van-gogh": {
        "option": {
          "id": "vincent-van-gogh",
          "name": "Vincent Van Gogh",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3382,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 20,
      },
    },
  },
  "Justice-peace-1-1": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "julia-child",
          "name": "Julia Child",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "paul-mccartney",
          "name": "Paul McCartney",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "Justice-peace-1-1",
      "seats": 1,
      "title": "Justice of the Peace, Precinct 1, Place 1",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3243,
      "overvotes": 9,
      "undervotes": 140,
    },
    "tallies": {
      "julia-child": {
        "option": {
          "id": "julia-child",
          "name": "Julia Child",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1540,
      },
      "paul-mccartney": {
        "option": {
          "id": "paul-mccartney",
          "name": "Paul McCartney",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1544,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 10,
      },
    },
  },
  "comm-ag": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "helen-keller",
          "name": "Helen Keller",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "steve-jobs",
          "name": "Steve Jobs",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "comm-ag",
      "seats": 1,
      "title": "Commissioner of Agriculture",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7033,
      "overvotes": 17,
      "undervotes": 292,
    },
    "tallies": {
      "helen-keller": {
        "option": {
          "id": "helen-keller",
          "name": "Helen Keller",
          "partyIds": [
            "0",
          ],
        },
        "tally": 3251,
      },
      "steve-jobs": {
        "option": {
          "id": "steve-jobs",
          "name": "Steve Jobs",
          "partyIds": [
            "1",
          ],
        },
        "tally": 3464,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 9,
      },
    },
  },
  "comptroller": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "natalie-portman",
          "name": "Natalie Portman",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "frank-sinatra",
          "name": "Frank Sinatra",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "andy-warhol",
          "name": "Andy Warhol",
          "partyIds": [
            "3",
          ],
        },
        {
          "id": "alfred-hitchcock",
          "name": "Alfred Hitchcock",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "comptroller",
      "seats": 1,
      "title": "State Comptroller",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7033,
      "overvotes": 16,
      "undervotes": 309,
    },
    "tallies": {
      "alfred-hitchcock": {
        "option": {
          "id": "alfred-hitchcock",
          "name": "Alfred Hitchcock",
          "partyIds": [
            "3",
          ],
        },
        "tally": 1636,
      },
      "andy-warhol": {
        "option": {
          "id": "andy-warhol",
          "name": "Andy Warhol",
          "partyIds": [
            "3",
          ],
        },
        "tally": 1646,
      },
      "frank-sinatra": {
        "option": {
          "id": "frank-sinatra",
          "name": "Frank Sinatra",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1749,
      },
      "natalie-portman": {
        "option": {
          "id": "natalie-portman",
          "name": "Natalie Portman",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1667,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 10,
      },
    },
  },
  "constable-1": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "beethoven",
          "name": "Ludwig Van Beethoven",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "walt-disney",
          "name": "Walt Disney",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "constable-1",
      "seats": 1,
      "title": "Constable, Precinct 1",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3243,
      "overvotes": 4,
      "undervotes": 152,
    },
    "tallies": {
      "beethoven": {
        "option": {
          "id": "beethoven",
          "name": "Ludwig Van Beethoven",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1516,
      },
      "walt-disney": {
        "option": {
          "id": "walt-disney",
          "name": "Walt Disney",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1566,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 5,
      },
    },
  },
  "county-attorney": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "isaac-newton",
          "name": "Isaac Newton",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "harry-potter",
          "name": "Harry Potter",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "county-attorney",
      "seats": 1,
      "title": "County Attorney",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3243,
      "overvotes": 5,
      "undervotes": 160,
    },
    "tallies": {
      "harry-potter": {
        "option": {
          "id": "harry-potter",
          "name": "Harry Potter",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1527,
      },
      "isaac-newton": {
        "option": {
          "id": "isaac-newton",
          "name": "Isaac Newton",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1547,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 4,
      },
    },
  },
  "county-tax-assessor": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "bruce-lee",
          "name": "Bruce Lee",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "christopher-columbus",
          "name": "Christopher Columbus",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "county-tax-assessor",
      "seats": 1,
      "title": "Country Tax Assessor-Collector",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3243,
      "overvotes": 5,
      "undervotes": 136,
    },
    "tallies": {
      "bruce-lee": {
        "option": {
          "id": "bruce-lee",
          "name": "Bruce Lee",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1570,
      },
      "christopher-columbus": {
        "option": {
          "id": "christopher-columbus",
          "name": "Christopher Columbus",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1528,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 4,
      },
    },
  },
  "district-attorney": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "theodore-roosevelt",
          "name": "Theodore Roosevelt",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "edgar-allan-poe",
          "name": "Edgar Allan Poe",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "district-attorney",
      "seats": 1,
      "title": "District Attorney",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3185,
      "overvotes": 2,
      "undervotes": 122,
    },
    "tallies": {
      "edgar-allan-poe": {
        "option": {
          "id": "edgar-allan-poe",
          "name": "Edgar Allan Poe",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1519,
      },
      "theodore-roosevelt": {
        "option": {
          "id": "theodore-roosevelt",
          "name": "Theodore Roosevelt",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1540,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 2,
      },
    },
  },
  "governor": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "sherlock-holmes",
          "name": "Sherlock Holmes",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "thomas-edison",
          "name": "Thomas Edison",
          "partyIds": [
            "1",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "governor",
      "seats": 1,
      "title": "Governor",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3201,
      "overvotes": 5,
      "undervotes": 148,
    },
    "tallies": {
      "sherlock-holmes": {
        "option": {
          "id": "sherlock-holmes",
          "name": "Sherlock Holmes",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1477,
      },
      "thomas-edison": {
        "option": {
          "id": "thomas-edison",
          "name": "Thomas Edison",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1565,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 6,
      },
    },
  },
  "lieutenant-governor": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "winston-churchill",
          "name": "Winston Churchill",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "oprah-winfrey",
          "name": "Oprah Winfrey",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "louis-armstrong",
          "name": "Louis Armstrong",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "lieutenant-governor",
      "seats": 1,
      "title": "Lieutenant Governor",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7033,
      "overvotes": 19,
      "undervotes": 296,
    },
    "tallies": {
      "louis-armstrong": {
        "option": {
          "id": "louis-armstrong",
          "name": "Louis Armstrong",
          "partyIds": [
            "3",
          ],
        },
        "tally": 2232,
      },
      "oprah-winfrey": {
        "option": {
          "id": "oprah-winfrey",
          "name": "Oprah Winfrey",
          "partyIds": [
            "1",
          ],
        },
        "tally": 2237,
      },
      "winston-churchill": {
        "option": {
          "id": "winston-churchill",
          "name": "Winston Churchill",
          "partyIds": [
            "0",
          ],
        },
        "tally": 2237,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 12,
      },
    },
  },
  "president": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "marie-curie",
          "name": "Marie Curie",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "indiana-jones",
          "name": "Indiana Jones",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "mona-lisa",
          "name": "Mona Lisa",
          "partyIds": [
            "3",
          ],
        },
        {
          "id": "jackie-chan",
          "name": "Jackie Chan",
          "partyIds": [
            "3",
          ],
        },
        {
          "id": "tim-allen",
          "name": "Tim Allen",
          "partyIds": [
            "2",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "president",
      "seats": 1,
      "title": "President",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7033,
      "overvotes": 18,
      "undervotes": 293,
    },
    "tallies": {
      "indiana-jones": {
        "option": {
          "id": "indiana-jones",
          "name": "Indiana Jones",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1314,
      },
      "jackie-chan": {
        "option": {
          "id": "jackie-chan",
          "name": "Jackie Chan",
          "partyIds": [
            "3",
          ],
        },
        "tally": 1372,
      },
      "marie-curie": {
        "option": {
          "id": "marie-curie",
          "name": "Marie Curie",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1351,
      },
      "mona-lisa": {
        "option": {
          "id": "mona-lisa",
          "name": "Mona Lisa",
          "partyIds": [
            "3",
          ],
        },
        "tally": 1367,
      },
      "tim-allen": {
        "option": {
          "id": "tim-allen",
          "name": "Tim Allen",
          "partyIds": [
            "2",
          ],
        },
        "tally": 1311,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 7,
      },
    },
  },
  "prop-1": {
    "contest": {
      "description": "Shall there be an amendment to the state constitution concerning initiative and referendum petitions, and, in connection therewith, changing petition rights and procedures; allowing petitions to be submitted at all levels of state government; limiting initiative ballot titles to 75 words; changing single-subject requirements and procedures; limiting the annual number of new laws that governments may exclude from possible referendum petitions; establishing standards for review of filed petitions; specifying that petitions may be voted on at any November election; limiting the use of government resources to discuss a petition; requiring voter approval for future petition laws and rules and for changes to certain voter-approved petitions; and authorizing measures to enforce the amendment?",
      "districtId": "district-2",
      "id": "prop-1",
      "title": "Proposition 1",
      "type": "yesno",
    },
    "metadata": {
      "ballots": 3243,
      "overvotes": 3,
      "undervotes": 153,
    },
    "tallies": {
      "no": {
        "option": [
          "no",
        ],
        "tally": 1546,
      },
      "yes": {
        "option": [
          "yes",
        ],
        "tally": 1541,
      },
    },
  },
  "prop-2": {
    "contest": {
      "description": "Shall the state Constitution be amended to create a Healthy Future Trust Fund which will: 1) be used to reduce and prevent tobacco use, to increase funding for healthcare access and treatment for eligible low-income individuals and Medicaid recipients, and cover administrative costs; 2) be funded by tax of four cents per cigarette and twenty percent on other tobacco products; and 3) be kept separate from general revenue and annually audited?",
      "districtId": "district-1",
      "id": "prop-2",
      "title": "Proposition 2",
      "type": "yesno",
    },
    "metadata": {
      "ballots": 7077,
      "overvotes": 11,
      "undervotes": 323,
    },
    "tallies": {
      "no": {
        "option": [
          "no",
        ],
        "tally": 3365,
      },
      "yes": {
        "option": [
          "yes",
        ],
        "tally": 3378,
      },
    },
  },
  "representative-district-18": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "michael-jordan",
          "name": "Michael Jordan",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "albert-einstein",
          "name": "Albert Einstein",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "neil-armstrong",
          "name": "Neil Armstrong",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-1",
      "id": "representative-district-18",
      "seats": 1,
      "title": "Representative, District 18",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 7033,
      "overvotes": 14,
      "undervotes": 317,
    },
    "tallies": {
      "albert-einstein": {
        "option": {
          "id": "albert-einstein",
          "name": "Albert Einstein",
          "partyIds": [
            "1",
          ],
        },
        "tally": 2253,
      },
      "michael-jordan": {
        "option": {
          "id": "michael-jordan",
          "name": "Michael Jordan",
          "partyIds": [
            "0",
          ],
        },
        "tally": 2237,
      },
      "neil-armstrong": {
        "option": {
          "id": "neil-armstrong",
          "name": "Neil Armstrong",
          "partyIds": [
            "3",
          ],
        },
        "tally": 2197,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 15,
      },
    },
  },
  "senator": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "earhart",
          "name": "Amelia Earhart",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "bond",
          "name": "James Bond",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "antoinette",
          "name": "Marie Antoinette",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "senator",
      "seats": 1,
      "title": "Senator",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3201,
      "overvotes": 4,
      "undervotes": 134,
    },
    "tallies": {
      "antoinette": {
        "option": {
          "id": "antoinette",
          "name": "Marie Antoinette",
          "partyIds": [
            "3",
          ],
        },
        "tally": 1003,
      },
      "bond": {
        "option": {
          "id": "bond",
          "name": "James Bond",
          "partyIds": [
            "1",
          ],
        },
        "tally": 992,
      },
      "earhart": {
        "option": {
          "id": "earhart",
          "name": "Amelia Earhart",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1063,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 5,
      },
    },
  },
  "sheriff": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "robin-williams",
          "name": "Robin Williams",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "brad-pitt",
          "name": "Brad Pitt",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "william-shakespeare",
          "name": "William Shakespeare",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "sheriff",
      "seats": 1,
      "title": "Sheriff",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3243,
      "overvotes": 5,
      "undervotes": 146,
    },
    "tallies": {
      "brad-pitt": {
        "option": {
          "id": "brad-pitt",
          "name": "Brad Pitt",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1012,
      },
      "robin-williams": {
        "option": {
          "id": "robin-williams",
          "name": "Robin Williams",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1015,
      },
      "william-shakespeare": {
        "option": {
          "id": "william-shakespeare",
          "name": "William Shakespeare",
          "partyIds": [
            "3",
          ],
        },
        "tally": 1058,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 7,
      },
    },
  },
  "ss-justic-3": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "john-snow",
          "name": "John Snow",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "mark-twain",
          "name": "Mark Twain",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "ss-justic-3",
      "seats": 1,
      "title": "Justice, Supreme Court, Place 3",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3201,
      "overvotes": 3,
      "undervotes": 133,
    },
    "tallies": {
      "john-snow": {
        "option": {
          "id": "john-snow",
          "name": "John Snow",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1551,
      },
      "mark-twain": {
        "option": {
          "id": "mark-twain",
          "name": "Mark Twain",
          "partyIds": [
            "3",
          ],
        },
        "tally": 1507,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 7,
      },
    },
  },
  "ss-justic-5": {
    "contest": {
      "allowWriteIns": true,
      "candidates": [
        {
          "id": "benjamin-franklin",
          "name": "Benjamin Franklin",
          "partyIds": [
            "0",
          ],
        },
        {
          "id": "robert-downey-jr",
          "name": "Robert Downey Jr.",
          "partyIds": [
            "1",
          ],
        },
        {
          "id": "bill-nye",
          "name": "Bill Nye",
          "partyIds": [
            "3",
          ],
        },
      ],
      "districtId": "district-2",
      "id": "ss-justic-5",
      "seats": 1,
      "title": "Justice, Supreme Court, Place 5",
      "type": "candidate",
    },
    "metadata": {
      "ballots": 3201,
      "overvotes": 1,
      "undervotes": 107,
    },
    "tallies": {
      "benjamin-franklin": {
        "option": {
          "id": "benjamin-franklin",
          "name": "Benjamin Franklin",
          "partyIds": [
            "0",
          ],
        },
        "tally": 1056,
      },
      "bill-nye": {
        "option": {
          "id": "bill-nye",
          "name": "Bill Nye",
          "partyIds": [
            "3",
          ],
        },
        "tally": 1003,
      },
      "robert-downey-jr": {
        "option": {
          "id": "robert-downey-jr",
          "name": "Robert Downey Jr.",
          "partyIds": [
            "1",
          ],
        },
        "tally": 1027,
      },
      "write-in": {
        "option": {
          "id": "write-in",
          "isWriteIn": true,
          "name": "Write-In",
        },
        "tally": 7,
      },
    },
  },
}
`;
